[gd_scene load_steps=5 format=2]

[ext_resource path="res://Alet/Kılıç/KılıcEfek.png" type="Texture" id=1]
[ext_resource path="res://Alet/Kılıç/TaşKılıç.png" type="Texture" id=2]
[ext_resource path="res://Alet/Alet.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 2 )

[node name="Kilic" type="Area2D"]
script = ExtResource( 3 )

[node name="Simge" type="Sprite" parent="."]
rotation = 0.785398
texture = ExtResource( 2 )
offset = Vector2( 4.99212, -4.99239 )

[node name="Efek" type="Sprite" parent="Simge"]
visible = false
position = Vector2( 2, -12.5 )
texture = ExtResource( 1 )

[node name="VurmaAlan" type="CollisionShape2D" parent="."]
position = Vector2( 12, 0 )
shape = SubResource( 1 )
disabled = true

[node name="TimerEfek" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="timeout" from="TimerEfek" to="." method="_on_TimerEfek_timeout"]
